--- a/WebContent/test.html
+++ b/WebContent/test.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+GIT Works! pp pp lamaialadicortana
+</body>
+<!DOCTYPE html>
+<html>
+<head>
 <meta charset="ISO-8859-1">
 <title>Hello GIT</title>
 </head>
 <body>
-GIT Works! pp pp lamaialadicortana
+Ciao toppy merda!!
 </body>
 </html>
